docs/api/qiskit/0.19/qiskit.result.Result.mdx
---
title: Result (v0.19)
description: API reference for qiskit.result.Result in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.result.Result
---

# Result

<Class id="qiskit.result.Result" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/result/result.py" signature="Result(backend_name, backend_version, qobj_id, job_id, success, results, **kwargs)" modifiers="class">
  Model for Results.

  Please note that this class only describes the required fields. For the full description of the model, please check `ResultSchema`.

  ### backend\_name

  <Attribute id="qiskit.result.Result.backend_name">
    backend name.

    **Type**

    str
  </Attribute>

  ### backend\_version

  <Attribute id="qiskit.result.Result.backend_version">
    backend version, in the form X.Y.Z.

    **Type**

    str
  </Attribute>

  ### qobj\_id

  <Attribute id="qiskit.result.Result.qobj_id">
    user-generated Qobj id.

    **Type**

    str
  </Attribute>

  ### job\_id

  <Attribute id="qiskit.result.Result.job_id">
    unique execution id from the backend.

    **Type**

    str
  </Attribute>

  ### success

  <Attribute id="qiskit.result.Result.success">
    True if complete input qobj executed correctly. (Implies each experiment success)

    **Type**

    bool
  </Attribute>

  ### results

  <Attribute id="qiskit.result.Result.results">
    corresponding results for array of experiments of the input qobj

    **Type**

    list\[ExperimentResult]
  </Attribute>

  BaseModel initializer.

  <Admonition title="Note" type="note">
    The `validate` argument is used for controlling the behavior of the schema binding, and will not be present on the created object.
  </Admonition>

  ## Attributes

  <span id="result-schema" />

  ### schema

  <Attribute id="qiskit.result.Result.schema" attributeValue="<ResultSchema(many=False)>" />

  <span id="result-shallow-schema" />

  ### shallow\_schema

  <Attribute id="qiskit.result.Result.shallow_schema" attributeValue="<ResultSchema(many=False)>" />

  ## Methods

  <span id="result-data" />

  ### data

  <Function id="qiskit.result.Result.data" signature="Result.data(experiment=None)">
    Get the raw data for an experiment.

    Note this data will be a single classical and quantum register and in a format required by the results schema. We recommend that most users use the get\_xxx method, and the data will be post-processed for the data type.

    **Parameters**

    **experiment** (*str or* [*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")  *or*[*Schedule*](qiskit.pulse.Schedule "qiskit.pulse.Schedule") *or int or None*) – the index of the experiment. Several types are accepted for convenience:: \* str: the name of the experiment. \* QuantumCircuit: the name of the circuit instance will be used. \* Schedule: the name of the schedule instance will be used. \* int: the position of the experiment. \* None: if there is only one experiment, returns it.

    **Returns**

    A dictionary of results data for an experiment. The data depends on the backend it ran on and the settings of meas\_level, meas\_return and memory.

    QASM backends return a dictionary of dictionary with the key ‘counts’ and with the counts, with the second dictionary keys containing a string in hex format (`0x123`) and values equal to the number of times this outcome was measured.

    Statevector backends return a dictionary with key ‘statevector’ and values being a list\[list\[complex components]] list of 2^num\_qubits complex amplitudes. Where each complex number is represented as a 2 entry list for each component. For example, a list of \[0.5+1j, 0-1j] would be represented as \[\[0.5, 1], \[0, -1]].

    Unitary backends return a dictionary with key ‘unitary’ and values being a list\[list\[list\[complex components]]] list of 2^num\_qubits x 2^num\_qubits complex amplitudes in a two entry list for each component. For example if the amplitude is \[\[0.5+0j, 0-1j], …] the value returned will be \[\[\[0.5, 0], \[0, -1]], …].

    The simulator backends also have an optional key ‘snapshots’ which returns a dict of snapshots specified by the simulator backend. The value is of the form dict\[slot: dict\[str: array]] where the keys are the requested snapshot slots, and the values are a dictionary of the snapshots.

    **Return type**

    dict

    **Raises**

    **QiskitError** – if data for the experiment could not be retrieved.
  </Function>

  <span id="result-from-dict" />

  ### from\_dict

  <Function id="qiskit.result.Result.from_dict" signature="Result.from_dict(dict_)" modifiers="classmethod">
    Deserialize a dict of simple types into an instance of this class.

    Note that this method requires that the model is bound with `@bind_schema`.
  </Function>

  <span id="result-get-counts" />

  ### get\_counts

  <Function id="qiskit.result.Result.get_counts" signature="Result.get_counts(experiment=None)">
    Get the histogram data of an experiment.

    **Parameters**

    **experiment** (*str or* [*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")  *or*[*Schedule*](qiskit.pulse.Schedule "qiskit.pulse.Schedule") *or int or None*) – the index of the experiment, as specified by `get_data()`.

    **Returns**

    **int] or list\[dict\[str:int]]: a dictionary or a list of**

    dictionaries. A dictionary has the counts for each qubit with the keys containing a string in binary format and separated according to the registers in circuit (e.g. `0100 1110`). The string is little-endian (cr\[0] on the right hand side).

    **Return type**

    dict\[str

    **Raises**

    **QiskitError** – if there are no counts for the experiment.
  </Function>

  <span id="result-get-memory" />

  ### get\_memory

  <Function id="qiskit.result.Result.get_memory" signature="Result.get_memory(experiment=None)">
    Get the sequence of memory states (readouts) for each shot The data from the experiment is a list of format \[‘00000’, ‘01000’, ‘10100’, ‘10100’, ‘11101’, ‘11100’, ‘00101’, …, ‘01010’]

    **Parameters**

    **experiment** (*str or* [*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")  *or*[*Schedule*](qiskit.pulse.Schedule "qiskit.pulse.Schedule") *or int or None*) – the index of the experiment, as specified by `data()`.

    **Returns**

    **Either the list of each outcome, formatted according to**

    registers in circuit or a complex numpy np.darray with shape:

    | meas\_level | meas\_return | shape                                                 |
    | ----------- | ------------ | ----------------------------------------------------- |
    | 0           | single       | np.ndarray\[shots, memory\_slots, memory\_slot\_size] |
    | 0           | avg          | np.ndarray\[memory\_slots, memory\_slot\_size]        |
    | 1           | single       | np.ndarray\[shots, memory\_slots]                     |
    | 1           | avg          | np.ndarray\[memory\_slots]                            |
    | 2           | memory=True  | list                                                  |

    **Return type**

    List\[str] or np.ndarray

    **Raises**

    **QiskitError** – if there is no memory data for the circuit.
  </Function>

  <span id="result-get-statevector" />

  ### get\_statevector

  <Function id="qiskit.result.Result.get_statevector" signature="Result.get_statevector(experiment=None, decimals=None)">
    Get the final statevector of an experiment.

    **Parameters**

    *   **experiment** (*str or* [*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")  *or*[*Schedule*](qiskit.pulse.Schedule "qiskit.pulse.Schedule") *or int or None*) – the index of the experiment, as specified by `data()`.
    *   **decimals** (*int*) – the number of decimals in the statevector. If None, does not round.

    **Returns**

    list of 2^num\_qubits complex amplitudes.

    **Return type**

    list\[complex]

    **Raises**

    **QiskitError** – if there is no statevector for the experiment.
  </Function>

  <span id="result-get-unitary" />

  ### get\_unitary

  <Function id="qiskit.result.Result.get_unitary" signature="Result.get_unitary(experiment=None, decimals=None)">
    Get the final unitary of an experiment.

    **Parameters**

    *   **experiment** (*str or* [*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")  *or*[*Schedule*](qiskit.pulse.Schedule "qiskit.pulse.Schedule") *or int or None*) – the index of the experiment, as specified by `data()`.
    *   **decimals** (*int*) – the number of decimals in the unitary. If None, does not round.

    **Returns**

    **list of 2^num\_qubits x 2^num\_qubits complex**

    amplitudes.

    **Return type**

    list\[list\[complex]]

    **Raises**

    **QiskitError** – if there is no unitary for the experiment.
  </Function>

  <span id="result-to-dict" />

  ### to\_dict

  <Function id="qiskit.result.Result.to_dict" signature="Result.to_dict()">
    Serialize the model into a Python dict of simple types.

    Note that this method requires that the model is bound with `@bind_schema`.
  </Function>
</Class>

