docs/api/qiskit/0.24/qiskit.result.Result.mdx
---
title: Result
description: API reference for qiskit.result.Result
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.result.Result
---

<span id="qiskit-result-result" />

# qiskit.result.Result

<Class id="qiskit.result.Result" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.16/qiskit/result/result.py" signature="Result(backend_name, backend_version, qobj_id, job_id, success, results, date=None, status=None, header=None, **kwargs)">
  Model for Results.

  ### backend\_name

  <Attribute id="qiskit.result.Result.backend_name" name="backend_name">
    backend name.

    **Type**

    str
  </Attribute>

  ### backend\_version

  <Attribute id="qiskit.result.Result.backend_version" name="backend_version">
    backend version, in the form X.Y.Z.

    **Type**

    str
  </Attribute>

  ### qobj\_id

  <Attribute id="qiskit.result.Result.qobj_id" name="qobj_id">
    user-generated Qobj id.

    **Type**

    str
  </Attribute>

  ### job\_id

  <Attribute id="qiskit.result.Result.job_id" name="job_id">
    unique execution id from the backend.

    **Type**

    str
  </Attribute>

  ### success

  <Attribute id="qiskit.result.Result.success" name="success">
    True if complete input qobj executed correctly. (Implies each experiment success)

    **Type**

    bool
  </Attribute>

  ### results

  <Attribute id="qiskit.result.Result.results" name="results">
    corresponding results for array of experiments of the input qobj

    **Type**

    list\[ExperimentResult]
  </Attribute>

  ### \_\_init\_\_

  <Function id="qiskit.result.Result.__init__" name="__init__" signature="__init__(backend_name, backend_version, qobj_id, job_id, success, results, date=None, status=None, header=None, **kwargs)">
    Initialize self. See help(type(self)) for accurate signature.
  </Function>

  ## Methods

  |                                                                                                                            |                                                                                                                                                                                          |
  | -------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
  | [`__init__`](#qiskit.result.Result.__init__ "qiskit.result.Result.__init__")(backend\_name, backend\_version, …)           | Initialize self.                                                                                                                                                                         |
  | [`data`](#qiskit.result.Result.data "qiskit.result.Result.data")(\[experiment])                                            | Get the raw data for an experiment.                                                                                                                                                      |
  | [`from_dict`](#qiskit.result.Result.from_dict "qiskit.result.Result.from_dict")(data)                                      | Create a new ExperimentResultData object from a dictionary.                                                                                                                              |
  | [`get_counts`](#qiskit.result.Result.get_counts "qiskit.result.Result.get_counts")(\[experiment])                          | Get the histogram data of an experiment.                                                                                                                                                 |
  | [`get_memory`](#qiskit.result.Result.get_memory "qiskit.result.Result.get_memory")(\[experiment])                          | Get the sequence of memory states (readouts) for each shot The data from the experiment is a list of format \[‘00000’, ‘01000’, ‘10100’, ‘10100’, ‘11101’, ‘11100’, ‘00101’, …, ‘01010’] |
  | [`get_statevector`](#qiskit.result.Result.get_statevector "qiskit.result.Result.get_statevector")(\[experiment, decimals]) | Get the final statevector of an experiment.                                                                                                                                              |
  | [`get_unitary`](#qiskit.result.Result.get_unitary "qiskit.result.Result.get_unitary")(\[experiment, decimals])             | Get the final unitary of an experiment.                                                                                                                                                  |
  | [`to_dict`](#qiskit.result.Result.to_dict "qiskit.result.Result.to_dict")()                                                | Return a dictionary format representation of the Result                                                                                                                                  |

  ### data

  <Function id="qiskit.result.Result.data" name="data" signature="data(experiment=None)">
    Get the raw data for an experiment.

    Note this data will be a single classical and quantum register and in a format required by the results schema. We recommend that most users use the get\_xxx method, and the data will be post-processed for the data type.

    **Parameters**

    **experiment** (*str or* [*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")  *or*[*Schedule*](qiskit.pulse.Schedule "qiskit.pulse.Schedule") *or int or None*) – the index of the experiment. Several types are accepted for convenience:: \* str: the name of the experiment. \* QuantumCircuit: the name of the circuit instance will be used. \* Schedule: the name of the schedule instance will be used. \* int: the position of the experiment. \* None: if there is only one experiment, returns it.

    **Returns**

    A dictionary of results data for an experiment. The data depends on the backend it ran on and the settings of meas\_level, meas\_return and memory.

    QASM backends return a dictionary of dictionary with the key ‘counts’ and with the counts, with the second dictionary keys containing a string in hex format (`0x123`) and values equal to the number of times this outcome was measured.

    Statevector backends return a dictionary with key ‘statevector’ and values being a list\[list\[complex components]] list of 2^num\_qubits complex amplitudes. Where each complex number is represented as a 2 entry list for each component. For example, a list of \[0.5+1j, 0-1j] would be represented as \[\[0.5, 1], \[0, -1]].

    Unitary backends return a dictionary with key ‘unitary’ and values being a list\[list\[list\[complex components]]] list of 2^num\_qubits x 2^num\_qubits complex amplitudes in a two entry list for each component. For example if the amplitude is \[\[0.5+0j, 0-1j], …] the value returned will be \[\[\[0.5, 0], \[0, -1]], …].

    The simulator backends also have an optional key ‘snapshots’ which returns a dict of snapshots specified by the simulator backend. The value is of the form dict\[slot: dict\[str: array]] where the keys are the requested snapshot slots, and the values are a dictionary of the snapshots.

    **Return type**

    dict

    **Raises**

    **QiskitError** – if data for the experiment could not be retrieved.
  </Function>

  ### from\_dict

  <Function id="qiskit.result.Result.from_dict" name="from_dict" signature="classmethod from_dict(data)">
    Create a new ExperimentResultData object from a dictionary.

    **Parameters**

    **data** (*dict*) – A dictionary representing the Result to create. It will be in the same format as output by [`to_dict()`](#qiskit.result.Result.to_dict "qiskit.result.Result.to_dict").

    **Returns**

    The `Result` object from the input dictionary.

    **Return type**

    [Result](#qiskit.result.Result "qiskit.result.Result")
  </Function>

  ### get\_counts

  <Function id="qiskit.result.Result.get_counts" name="get_counts" signature="get_counts(experiment=None)">
    Get the histogram data of an experiment.

    **Parameters**

    **experiment** (*str or* [*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")  *or*[*Schedule*](qiskit.pulse.Schedule "qiskit.pulse.Schedule") *or int or None*) – the index of the experiment, as specified by `get_data()`.

    **Returns**

    **int] or list\[dict\[str:int]]: a dictionary or a list of**

    dictionaries. A dictionary has the counts for each qubit with the keys containing a string in binary format and separated according to the registers in circuit (e.g. `0100 1110`). The string is little-endian (cr\[0] on the right hand side).

    **Return type**

    dict\[str

    **Raises**

    **QiskitError** – if there are no counts for the experiment.
  </Function>

  ### get\_memory

  <Function id="qiskit.result.Result.get_memory" name="get_memory" signature="get_memory(experiment=None)">
    Get the sequence of memory states (readouts) for each shot The data from the experiment is a list of format \[‘00000’, ‘01000’, ‘10100’, ‘10100’, ‘11101’, ‘11100’, ‘00101’, …, ‘01010’]

    **Parameters**

    **experiment** (*str or* [*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")  *or*[*Schedule*](qiskit.pulse.Schedule "qiskit.pulse.Schedule") *or int or None*) – the index of the experiment, as specified by `data()`.

    **Returns**

    **Either the list of each outcome, formatted according to**

    registers in circuit or a complex numpy np.darray with shape:

    | meas\_level | meas\_return | shape                                                 |
    | ----------- | ------------ | ----------------------------------------------------- |
    | 0           | single       | np.ndarray\[shots, memory\_slots, memory\_slot\_size] |
    | 0           | avg          | np.ndarray\[memory\_slots, memory\_slot\_size]        |
    | 1           | single       | np.ndarray\[shots, memory\_slots]                     |
    | 1           | avg          | np.ndarray\[memory\_slots]                            |
    | 2           | memory=True  | list                                                  |

    **Return type**

    List\[str] or np.ndarray

    **Raises**

    **QiskitError** – if there is no memory data for the circuit.
  </Function>

  ### get\_statevector

  <Function id="qiskit.result.Result.get_statevector" name="get_statevector" signature="get_statevector(experiment=None, decimals=None)">
    Get the final statevector of an experiment.

    **Parameters**

    *   **experiment** (*str or* [*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")  *or*[*Schedule*](qiskit.pulse.Schedule "qiskit.pulse.Schedule") *or int or None*) – the index of the experiment, as specified by `data()`.
    *   **decimals** (*int*) – the number of decimals in the statevector. If None, does not round.

    **Returns**

    list of 2^num\_qubits complex amplitudes.

    **Return type**

    list\[complex]

    **Raises**

    **QiskitError** – if there is no statevector for the experiment.
  </Function>

  ### get\_unitary

  <Function id="qiskit.result.Result.get_unitary" name="get_unitary" signature="get_unitary(experiment=None, decimals=None)">
    Get the final unitary of an experiment.

    **Parameters**

    *   **experiment** (*str or* [*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")  *or*[*Schedule*](qiskit.pulse.Schedule "qiskit.pulse.Schedule") *or int or None*) – the index of the experiment, as specified by `data()`.
    *   **decimals** (*int*) – the number of decimals in the unitary. If None, does not round.

    **Returns**

    **list of 2^num\_qubits x 2^num\_qubits complex**

    amplitudes.

    **Return type**

    list\[list\[complex]]

    **Raises**

    **QiskitError** – if there is no unitary for the experiment.
  </Function>

  ### to\_dict

  <Function id="qiskit.result.Result.to_dict" name="to_dict" signature="to_dict()">
    Return a dictionary format representation of the Result

    **Returns**

    The dictionary form of the Result

    **Return type**

    dict
  </Function>
</Class>

